--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Main.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:label="@string/app_name" android:name=".Main.UserPanelActivity"/>
+        <activity android:label="@string/app_name" android:name=".Main.RegistrarPanelActivity"/>
+        <activity android:label="@string/app_name" android:name=".Main.AdminPanelActivity"/>
+        <activity android:label="@string/app_name" android:name=".Main.ModificarPanelActivity"/>
+
+
     </application>
 
 </manifest>
